# Coral

./: CMakeLists.txt
Coral.Managed/Properties/: launchSettings.json
Coral.Native/: CMakeLists.txt
Coral.Native/Include/Coral/: Attribute.hpp  HostInstance.hpp  ManagedObject.hpp
Coral.Native/Source/Coral/: HostInstance.cpp  ManagedObject.cpp
